[package]
name = "dropcamp-exporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["env", "derive"] }

anyhow = "1.0.81"
bigdecimal = { version = "0.4.3", features = ["serde"] }
chrono = { version = "0.4.37", features = ["serde"] }
duration-str = { version = "0.7.1", default-features = false, features = [
  "chrono",
  "serde",
] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
url = { version = "2.5.0", features = ["serde"] }

async-trait = "0.1.79"
futures = "0.3.30"
tokio = { version = "1.36.0", features = ["full"] }

tendermint = "0.35.0"
tendermint-rpc = { version = "0.35.0", features = [
  "tokio",
  "tracing",
  "tracing-subscriber",
  "http-client",
] }
cosmos-sdk-proto = { version = "0.21.1", default-features = false }
cosmrs = { version = "0.16.0", features = ["rpc", "tokio", "cosmwasm"] }

tracing = { version = "0.1.40", features = ["async-await", "log"] }
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
tracing-error = "0.2.0"
