[package]
name    = "dropcamp-exporter"
version = "0.1.0"
edition = "2021"
readme  = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive", "env"] }

anyhow     = "1.0.81"
bigdecimal = { version = "0.4.3", features = ["serde"] }
chrono     = { version = "0.4.37", features = ["serde"] }
serde      = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
url        = { version = "2.5.0", features = ["serde"] }

async-trait = "0.1.79"
futures     = "0.3.30"
tokio       = { version = "1.36.0", features = ["full"] }
tower       = { version = "0.4.13", features = ["buffer", "limit", "tokio", "util"] }

reqwest = { version = "^0.11.20", features = ["json", "serde_json"] }

cosmos-sdk-proto = { version = "0.21.1", default-features = false, features = ["cosmwasm"] }
tendermint       = "0.35.0"
tendermint-rpc   = { version = "0.35.0", features = ["http-client", "tokio", "tracing", "tracing-subscriber"] }

cw721 = "0.18.0"

tracing            = { version = "0.1.40", features = ["async-await", "log"] }
tracing-appender   = "0.2.3"
tracing-error      = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
